--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+*{
+  user-select: none;
+}
+
+*::selection{
+  background: none;
+}
+
+*::-moz-selection{
+  background: none;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: aliceblue;
